// Vitest Snapshot v1

exports[`vite plugin mode:development > custom blockType 1`] = `
"

const _missingExportShim = void 0;
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const _sfc_main = {};
if (typeof block0 === \\"function\\")
  block0(_sfc_main);
"
`;

exports[`vite plugin mode:development > generates custom block code 1`] = `
"

const _missingExportShim = void 0;
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const _sfc_main = {};
if (typeof block0 === \\"function\\")
  block0(_sfc_main);
"
`;

exports[`vite plugin mode:development > works with rollup plugin 1`] = `
"

const _missingExportShim = void 0;
function render(_ctx, _cache) {
  return _missingExportShim(), _missingExportShim(\\"div\\", null, [
    _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"hello-user\\", { userName: _ctx.userName })), 1),
    _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"shared-photos\\", { userName: _ctx.userName, photoCount: _ctx.photoCount, userGender: _ctx.userGender })), 1)
  ]);
}
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const script = {};
if (typeof block0 === \\"function\\")
  block0(script);
script.render = render;
"
`;

exports[`vite plugin mode:development > works with vue 2 1`] = `
"

const _missingExportShim = void 0;
var render = function() {
  var _vm = this;
  var _h = _vm.$createElement;
  var _c = _vm._self._c || _h;
  return _c(\\"div\\", [_c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"hello-user\\", {
    userName: _vm.userName
  })))]), _c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"shared-photos\\", {
    userName: _vm.userName,
    photoCount: _vm.photoCount,
    userGender: _vm.userGender
  })))])]);
};
var staticRenderFns = [];
function normalizeComponent(scriptExports, render2, staticRenderFns2, functionalTemplate, injectStyles, scopeId, moduleIdentifier, shadowMode) {
  var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
  if (render2) {
    options.render = render2;
    options.staticRenderFns = staticRenderFns2;
    options._compiled = true;
  }
  if (functionalTemplate) {
    options.functional = true;
  }
  if (scopeId) {
    options._scopeId = \\"data-v-\\" + scopeId;
  }
  var hook;
  if (moduleIdentifier) {
    hook = function(context) {
      context = context || this.$vnode && this.$vnode.ssrContext || this.parent && this.parent.$vnode && this.parent.$vnode.ssrContext;
      if (!context && typeof __VUE_SSR_CONTEXT__ !== \\"undefined\\") {
        context = __VUE_SSR_CONTEXT__;
      }
      if (injectStyles) {
        injectStyles.call(this, context);
      }
      if (context && context._registeredComponents) {
        context._registeredComponents.add(moduleIdentifier);
      }
    };
    options._ssrRegister = hook;
  } else if (injectStyles) {
    hook = shadowMode ? function() {
      injectStyles.call(this, (options.functional ? this.parent : this).$root.$options.shadowRoot);
    } : injectStyles;
  }
  if (hook) {
    if (options.functional) {
      options._injectStyles = hook;
      var originalRender = options.render;
      options.render = function renderWithStyleInjection(h, context) {
        hook.call(context);
        return originalRender(h, context);
      };
    } else {
      var existing = options.beforeCreate;
      options.beforeCreate = existing ? [].concat(existing, hook) : [hook];
    }
  }
  return {
    exports: scriptExports,
    options
  };
}
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const __vue2_script = {};
const __cssModules = {};
var __component__ = /* @__PURE__ */ normalizeComponent(__vue2_script, render, staticRenderFns, false, __vue2_injectStyles, null, null, null);
function __vue2_injectStyles(context) {
  for (let o in __cssModules) {
    this[o] = __cssModules[o];
  }
}
if (typeof block0 === \\"function\\")
  block0(__component__);
"
`;

exports[`vite plugin mode:production > custom blockType 1`] = `
"

const _missingExportShim = void 0;
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const _sfc_main = {};
if (typeof block0 === \\"function\\")
  block0(_sfc_main);
"
`;

exports[`vite plugin mode:production > generates custom block code 1`] = `
"

const _missingExportShim = void 0;
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const _sfc_main = {};
if (typeof block0 === \\"function\\")
  block0(_sfc_main);
"
`;

exports[`vite plugin mode:production > works with rollup plugin 1`] = `
"

const _missingExportShim = void 0;
function render(_ctx, _cache) {
  return _missingExportShim(), _missingExportShim(\\"div\\", null, [
    _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"hello-user\\", { userName: _ctx.userName })), 1),
    _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"shared-photos\\", { userName: _ctx.userName, photoCount: _ctx.photoCount, userGender: _ctx.userGender })), 1)
  ]);
}
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const script = {};
if (typeof block0 === \\"function\\")
  block0(script);
script.render = render;
"
`;

exports[`vite plugin mode:production > works with vue 2 1`] = `
"

const _missingExportShim = void 0;
var render = function() {
  var _vm = this;
  var _h = _vm.$createElement;
  var _c = _vm._self._c || _h;
  return _c(\\"div\\", [_c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"hello-user\\", {
    userName: _vm.userName
  })))]), _c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"shared-photos\\", {
    userName: _vm.userName,
    photoCount: _vm.photoCount,
    userGender: _vm.userGender
  })))])]);
};
var staticRenderFns = [];
function normalizeComponent(scriptExports, render2, staticRenderFns2, functionalTemplate, injectStyles, scopeId, moduleIdentifier, shadowMode) {
  var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
  if (render2) {
    options.render = render2;
    options.staticRenderFns = staticRenderFns2;
    options._compiled = true;
  }
  if (functionalTemplate) {
    options.functional = true;
  }
  if (scopeId) {
    options._scopeId = \\"data-v-\\" + scopeId;
  }
  var hook;
  if (moduleIdentifier) {
    hook = function(context) {
      context = context || this.$vnode && this.$vnode.ssrContext || this.parent && this.parent.$vnode && this.parent.$vnode.ssrContext;
      if (!context && typeof __VUE_SSR_CONTEXT__ !== \\"undefined\\") {
        context = __VUE_SSR_CONTEXT__;
      }
      if (injectStyles) {
        injectStyles.call(this, context);
      }
      if (context && context._registeredComponents) {
        context._registeredComponents.add(moduleIdentifier);
      }
    };
    options._ssrRegister = hook;
  } else if (injectStyles) {
    hook = shadowMode ? function() {
      injectStyles.call(this, (options.functional ? this.parent : this).$root.$options.shadowRoot);
    } : injectStyles;
  }
  if (hook) {
    if (options.functional) {
      options._injectStyles = hook;
      var originalRender = options.render;
      options.render = function renderWithStyleInjection(h, context) {
        hook.call(context);
        return originalRender(h, context);
      };
    } else {
      var existing = options.beforeCreate;
      options.beforeCreate = existing ? [].concat(existing, hook) : [hook];
    }
  }
  return {
    exports: scriptExports,
    options
  };
}
function block0(Component) {
  const target = Component.options || Component;
  target.fluent = target.fluent || {};
  target.fluent[\\"en\\"] = new _missingExportShim(\`# Simple things are simple.
hello-user = Hello, {$userName}!

# Complex things are possible.
shared-photos =
  {$userName} {$photoCount ->
     [one] added one photo
    *[other] added {$photoCount} new photos
  } to {$userGender ->
     [male] his stream
     [female] her stream
    *[other] their stream
  }.\`);
}
const __vue2_script = {};
const __cssModules = {};
var __component__ = /* @__PURE__ */ normalizeComponent(__vue2_script, render, staticRenderFns, false, __vue2_injectStyles, null, null, null);
function __vue2_injectStyles(context) {
  for (let o in __cssModules) {
    this[o] = __cssModules[o];
  }
}
if (typeof block0 === \\"function\\")
  block0(__component__);
"
`;
